# paper_trail

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp  utils.h
.cache/clangd/index/: main.cpp.3F4B18F36D72E3FB.idx  pdf_parse.cpp.FD628B089D203FAA.idx  pdf_parse.h.A3B8160A1C645062.idx  utils.h.AA1D2165742E4A5C.idx
ext/: vk_mem_alloc.h
ext/libjpeg-turbo/: jconfigint.h.in
shaders/: Makefile
src/: decompress.c  decompress.h  main.c  main.cpp  pdf_objects.c  pdf_objects.h  pdf_parse.c  pdf_parse.cpp  pdf_parse.h  utils.h  vulkan.c  window.c  window.h
